# paper

./: .gitignore  Cargo.toml  LICENSE-Apache  LICENSE-MIT  rustfmt.toml
crates/glad-gl/: Cargo.toml
crates/glad-gl/src/: gl.rs
crates/paper_app/: Cargo.toml
crates/paper_app/src/: app.rs  camera.rs  commands.rs  entity.rs  event.rs  lib.rs  paper.rs
crates/paper_color/: Cargo.toml
crates/paper_color/src/: colors.rs  lib.rs  linear.rs  pallet.rs  srgba.rs
crates/paper_entity/src/: entity.rs
crates/paper_entity/src/material/: shader.rs
crates/paper_entity/src/material/shader/: default.vert
crates/paper_entity/src/mesh/: attribute.rs  mesh.rs  mod.rs
crates/paper_input/: Cargo.toml
crates/paper_input/src/: action.rs  event.rs  key.rs  lib.rs  mouse.rs
crates/paper_math/: Cargo.toml
crates/paper_math/src/: lib.rs  transform.rs
crates/paper_primitives/: Cargo.toml
crates/paper_primitives/src/: lib.rs  shapes_2d.rs
crates/paper_render/: Cargo.toml
crates/paper_render/src/: lib.rs
crates/paper_render/src/material/: color_material.rs  default_material.rs  material.rs  mod.rs  shader.rs
crates/paper_render/src/material/shader/color/: vert.glsl
crates/paper_render/src/material/shader/default_shader/: frag.glsl  vert.glsl
crates/paper_render/src/mesh/: attribute.rs  mesh.rs  mod.rs  primitive.rs  vertex.rs
crates/paper_renderable/: Cargo.toml
crates/paper_renderable/src/: entity.rs  lib.rs  sprite.rs
crates/paper_renderable/src/material/: color_material.rs  default_material.rs  material.rs  mod.rs  shader.rs
crates/paper_renderable/src/material/shader/color/: color.vert
crates/paper_renderable/src/material/shader/default/: default.vert
crates/paper_renderable/src/mesh/: mesh.rs  vertex.rs
crates/paper_utils/: Cargo.toml
crates/paper_utils/src/: array.rs  default.rs  hash.rs  lib.rs  uuid.rs
crates/paper_window/: Cargo.toml
crates/paper_window/src/: config.rs  lib.rs  window.rs
examples/: circle.rs  hello.rs  hello_paper.rs  triangle.rs  two_body.rs
src/: lib.rs  prelude.rs
