[package]
name = "paper_app"
version = "0.1.0-dev"
edition = "2024"
description = "The paper application"
keywords = ["paper"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xkonsti/paper"
rust-version = "1.89.0"
authors = ["Konstantin Opora <konstantinopora@gmail.com>"]

[dependencies]
# ------------< paper >------------
paper_window = { path = "../paper_window", version = "0.1.0-dev" }
paper_math = { path = "../paper_math", version = "0.1.0-dev" }
paper_input = { path = "../paper_input", version = "0.1.0-dev" }
paper_entity = { path = "../paper_renderable", version = "0.1.0-dev", features = [
    "internal",
] }
paper_color = { path = "../paper_color", version = "0.1.0-dev" }

# ------------< other >------------
glfw = { workspace = true }
glad-gl = { path = "../glad-gl" }
log = { workspace = true }
env_logger = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]

[lib]
name = "paper_app"
path = "src/lib.rs"
