[package]
name = "paper_math"
version = "0.1.0-dev"
edition = "2024"
description = "Math library for paper"
keywords = ["paper"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xkonsti/paper"
rust-version = "1.88.0"
authors = ["Konstantin Opora <konstantinopora@gmail.com>"]

[dependencies]
# ------------< paper >------------
paper_utils = { path = "../paper_utils", version = "0.1.0-dev" }

# ------------< other >------------
glam = { workspace = true }

[dev-dependencies]

[lib]
name = "paper_math"
path = "src/lib.rs"
