[package]
name = "paper_renderable"
version = "0.1.0-dev"
edition = "2024"
description = "Drawable entities for paper"
keywords = ["paper"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xkonsti/paper"
rust-version = "1.89.0"
authors = ["Konstantin Opora <konstantinopora@gmail.com>"]

[dependencies]
# ------------< paper >------------
paper_math = { path = "../paper_math", version = "0.1.0-dev" }
paper_utils = { path = "../paper_utils", version = "0.1.0-dev" }
paper_primitives = { path = "../paper_primitives", version = "0.1.0-dev", features = [
    "internal",
] }
paper_color = { path = "../paper_color", version = "0.1.0-dev" }

# ------------< other >------------
glad-gl = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]

[features]
internal = []


[lib]
name = "paper_renderable"
path = "src/lib.rs"
