[package]
name = "paper_window"
version = "0.1.0-dev"
edition = "2024"
description = "Handles the window creation and event handling for the Paper application"
keywords = ["paper"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xkonsti/paper"
rust-version = "1.89.0"
authors = ["Konstantin Opora <konstantinopora@gmail.com>"]

[dependencies]
# ------------< paper >------------
paper_math = { path = "../paper_math", version = "0.1.0-dev" }

# ------------< other >------------
glfw = { workspace = true }
glad-gl = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }


[dev-dependencies]

[lib]
name = "paper_window"
path = "src/lib.rs"
