[package]
name = "paper_window"
version = "0.1.0-dev"
edition = "2024"
description = "Handles the window creation and event handling for a paper application"
keywords = ["paper"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xkonsti/paper"
rust-version = "1.88.0"
authors = ["Konstantin Opora <konstantinopora@gmail.com>"]

[dependencies]
# ------------< paper >------------
paper_math = { path = "../paper_math", version = "0.1.0-dev" }
paper_color = { path = "../paper_color", version = "0.1.0-dev" }

# ------------< other >------------
glfw = { workspace = true }
glad-gl = { workspace = true }
log = { workspace = true }


[dev-dependencies]

[features]
internal = []

[lib]
name = "paper_window"
path = "src/lib.rs"
